--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
     "prettier": "^1.14.2",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.1.1"
   }
 }
