--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "samM1994",
+    "password": "NotAnother1",
     "database": "users_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "samM1994",
+    "password": "NotAnother1",
     "database": "users_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
